--- a/Client side-React/src/index.css
+++ b/Client side-React/src/index.css
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: black;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -48,6 +48,3 @@ ul {
   margin: 0;
   padding: 0;
 }
-
-
-
